selfhost/test/typechecker/bindingdecl_error_var_type_mismatch.out
Error at %FILE_NAME%:1:17
Type mismatch
  |  var a: String = -1
                     ^
Expected: String
but instead found: Int
